# instancy

./: .gitignore  CHANGELOG.md  COOKBOOK.md  CROSS_PROCESS_INTEGRATION.md  Cargo.toml  DESIGN.md  GUIDE.md  LICENSE  PER_STAGE_PARALLELISM.md  PLAN.md  README.md  commit-msg.tmp  stress_results_full.json  stress_test.rs  test_drain.rs  test_drop.rs  test_full_scenario.rs  test_invariant.rs  test_ordering.rs  test_pull_trace.rs  test_sentinel.rs  test_stale_cache.rs  test_stale_safety.rs  test_toctou.rs  test_toctou2.rs  test_was_full.rs  test_wrap2.rs  test_wrap_validity.rs  test_wraparound.rs  test_wrapping_sub.rs
.github/workflows/: ci.yml
async-timely/: Cargo.toml
async-timely/src/: cancellation.rs  error.rs  execute.rs  lib.rs  metrics.rs  worker_pool.rs
async-timely/src/communication/: codec.rs  connection.rs  interprocess.rs  mod.rs  transport.rs
async-timely/src/dataflow/: mod.rs  region.rs  scope.rs  stream.rs
async-timely/src/dataflow/channels/: pact.rs
async-timely/src/dataflow/operators/: binary.rs  branch.rs  gather.rs  mod.rs  pipeline_tests.rs
async-timely/src/progress/: change_batch.rs  mod.rs  operate.rs  reachability.rs  subgraph.rs  timestamp.rs
async-timely/src/providers/: execution.rs  transport.rs
async-timely/src/scheduler/: batching.rs  mod.rs  task_scheduler.rs
docs/: DESIGN.md  benchmark-results.md  cluster.md  communication.md  cookbook.md  datafusion-gap-analysis.md  decisions.md  error-handling.md  execution-model.md  observability.md  operators.md  progress-tracking.md  serialization.md  stress-testing.md
docs/design/: README.md  api-naming.md  api-panic-removal.md  api-visibility.md  benchmarking.md  cluster.md  communication.md  connection-factory-required.md  decisions.md  error-handling.md  execution-model.md  mem-lazy-channels.md  net-doc-reconnect.md  observability.md  operators.md  progress-tracking.md  serialization.md  stage-executor.md
docs/guide/: README.md  building-dataflows.md  core-concepts.md  custom-operators.md  distributed.md  error-handling.md  getting-started.md  iteration.md  multi-worker.md  observability.md  serialization.md  testing.md
docs/reference/: api.md
instancy/: Cargo.toml  LICENSE
instancy-integration/: Cargo.toml
instancy-integration/src/: coordinator.rs  dataflows.rs  lib.rs  node_actor.rs  protocol.rs  test_helpers.rs
instancy-integration/tests/: comprehensive.rs  cross_process.rs  failure_and_scaling.rs
instancy/benches/: comparative.rs  dataflow_throughput.rs  stress_test.rs  sustained_comparative.rs  transport_throughput.rs
instancy/examples/: async_io_channels.rs  async_spawn.rs  barrier.rs  bfs.rs  branching_pipeline.rs  broadcast.rs  cancellation.rs  cluster_basic.rs  cluster_exchange.rs  cluster_shared_transport.rs  delay.rs  distinct.rs  error_handling.rs  event_driven.rs  exchange.rs  exchange_wordcount.rs  execution_timeout.rs  graceful_drain.rs  hashjoin.rs  hello_dataflow.rs  loop_demo.rs  merge_streams.rs  metrics_collection.rs  notify_epoch_stats.rs  notify_wordcount.rs  pagerank.rs  panic_recovery.rs  partitioned_workers.rs  pingpong.rs  probe.rs  runtime_isolation.rs  simple_pipeline.rs  spawn_pipeline.rs  stage_parallelism.rs  stress_test.rs  unionfind.rs  wordcount.rs
instancy/src/: cancellation.rs  error.rs  execute.rs  executor_task.rs  lib.rs  membership.rs  order.rs  runtime.rs  runtime_event.rs  wire.rs  worker.rs  worker_pool.rs
instancy/src/communication/: allocator.rs  cluster_transport.rs  codec.rs  connection.rs  control_protocol.rs  interprocess.rs  mod.rs  probing.rs  progress_exchange.rs  remote_push.rs  sequencing.rs  session.rs  shared_pool.rs  shared_transport.rs  transport.rs  transport_session.rs
instancy/src/dataflow/: builder.rs  channel_operators.rs  context.rs  control.rs  dataflow_builder.rs  executor.rs  graph.rs  id.rs  mod.rs  probe.rs  region.rs  schedulable.rs  scope.rs  spec.rs  stage.rs  stage_executor.rs  stream.rs  wired_operators.rs
instancy/src/dataflow/channels/: bounded.rs  edge_materializer.rs  envelope.rs  exchange_channel.rs  exchange_message.rs  mock_network.rs  mod.rs  network.rs  pact.rs  pushpull.rs  spsc.rs  tee.rs  wake.rs
instancy/src/dataflow/operators/: binary.rs  branch.rs  broadcast.rs  concat.rs  delay.rs  exchange.rs  feedback.rs  gather.rs  handles.rs  input.rs  inspect.rs  mod.rs  output.rs  pipeline_tests.rs  probe.rs  rebalance.rs  unary.rs
instancy/src/metrics/: activation.rs  chrome_trace.rs  mod.rs  tracing_integration.rs
instancy/src/progress/: capability.rs  change_batch.rs  frontier.rs  frontier_aggregator.rs  mod.rs  mutable_antichain.rs  network_progress.rs  notificator.rs  operate.rs  progress_channel.rs  reachability.rs  subgraph.rs  timestamp.rs
instancy/src/providers/: execution.rs  mod.rs  transport.rs
instancy/src/scheduler/: batching.rs  mod.rs  policy.rs  task_scheduler.rs
instancy/tests/: advanced_dataflows.rs  cluster.rs  cluster_shared_transport.rs  cluster_tcp.rs  delay_operator.rs  edge_cases.rs  execution_timeout.rs  feedback_loops.rs  graceful_drain.rs  inter_process.rs  multi_dataflow.rs  multi_worker_aggregation.rs  multi_worker_branch_distribution.rs  multi_worker_broadcast.rs  multi_worker_iterate.rs  observability.rs  parallel_cluster_tcp.rs  parallel_dataflows.rs  progress_tracking.rs  rolling_upgrade.rs  scheduler_policies.rs  spawn_dataflow.rs  staged_parallelism.rs  timeout.rs
