[package]
name = "async-timely"
version = "0.1.0"
edition = "2024"
description = "An async reimplementation of timely-dataflow"
license = "MIT"

[dependencies]
thiserror = "2"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
bincode-codec = ["dep:bincode", "dep:serde"]
