[package]
name = "instancy-integration"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-process integration tests for instancy"

[dependencies]
instancy = { path = "../instancy", features = ["transport", "bincode-codec"] }
dactor = "0.3"
dactor-ractor = "0.3"
ractor = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v5"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "instancy-test-node"
path = "src/bin/instancy_test_node.rs"

[dev-dependencies]
