[package]
name = "instancy"
version = "0.1.0"
edition = "2024"
description = "An async reimplementation of timely-dataflow"
license = "MIT"

[dependencies]
thiserror = "2"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["io-util", "sync", "rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "io-util", "sync"] }
tracing-test = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["tracing", "transport"]
tracing = ["dep:tracing"]
bincode-codec = ["dep:bincode", "dep:serde"]
transport = ["dep:tokio"]
async-io = ["dep:tokio"]

[[example]]
name = "async_spawn"
required-features = ["async-io"]
