[package]
name = "instancy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "An async reimplementation of timely-dataflow built on Tokio"
license = "MIT"
repository = "https://github.com/Yaming-Hub/instancy"
homepage = "https://github.com/Yaming-Hub/instancy"
keywords = ["dataflow", "streaming", "async", "distributed", "timely"]
categories = ["concurrency", "asynchronous", "network-programming"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "2"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
crc32fast = { version = "1.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "net"] }
tokio-util = "0.7"
tracing-test = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["tracing", "transport"]
tracing = ["dep:tracing"]
bincode-codec = ["dep:bincode", "dep:serde"]
transport = ["dep:tokio", "dep:tokio-util", "dep:crc32fast"]
async-io = ["dep:tokio"]
test-utils = []

[[example]]
name = "async_spawn"
required-features = ["async-io"]
