[package]
name = "instancy"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "An async reimplementation of timely-dataflow built on Tokio"
license = "MIT"
repository = "https://github.com/Yaming-Hub/instancy"
homepage = "https://github.com/Yaming-Hub/instancy"
keywords = ["dataflow", "streaming", "async", "distributed", "timely"]
categories = ["concurrency", "asynchronous", "network-programming"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = "2"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["io-util", "sync", "rt", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
crc32fast = { version = "1.5.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timely = { version = "0.12", features = ["bincode"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "net"] }
tokio-util = "0.7"
tracing-test = "0.2"
tracing-subscriber = "0.3"

[features]
default = ["tracing", "transport"]
tracing = ["dep:tracing"]
bincode-codec = ["dep:bincode", "dep:serde"]
transport = ["dep:crc32fast"]
test-utils = []

[[example]]
name = "async_io_channels"

[[example]]
name = "error_handling"

[[example]]
name = "metrics_collection"

[[example]]
name = "panic_recovery"

[[example]]
name = "cluster_basic"
required-features = ["transport"]

[[example]]
name = "cluster_exchange"
required-features = ["transport"]

[[example]]
name = "cluster_shared_transport"
required-features = ["transport"]

[[example]]
name = "stress_test"

[dev-dependencies.criterion]
version = "0.5"
features = ["async_tokio"]

[[bench]]
name = "transport_throughput"
harness = false
required-features = ["transport"]

[[bench]]
name = "dataflow_throughput"
harness = false

[[bench]]
name = "comparative"
harness = false
